Added section grid and footer

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/501885fef0.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -44,27 +48,157 @@
             </button>
           </div>
         </div>
-        <div class="homepage__hero__list-container">
-          <ul class="homepage__hero__list">
-            <li class="homepage__hero__item" id="homepage__hero__item1">
-              <h2>Jazda testowa</h2>
-              <p>Zarezerwuj jazdę testową już dziś</p>
-            </li>
-            <li class="homepage__hero__item" id="homepage__hero__item2">
-              <h2>Konfigurator</h2>
-              <p>Obudz swoje marzenia</p>
-            </li>
-            <li class="homepage__hero__item" id="homepage__hero__item3">
-              <h2>Odzież</h2>
-              <p>Odkryj kolekcję naszej odzieży</p>
-            </li>
-            <li class="homepage__hero__item" id="homepage__hero__item4">
-              <h2>Akcesoria</h2>
-              <p>Odkryj nasze oryginalne akcesoria</p>
-            </li>
-          </ul>
+      </section>
+      <section class="list-container">
+        <ul class="list-container__list">
+          <li class="list-container__item" id="list-container__item1">
+            <h2>Jazda testowa</h2>
+            <p>Zarezerwuj jazdę testową już dziś</p>
+          </li>
+          <li class="list-container__item" id="list-container__item2">
+            <h2>Konfigurator</h2>
+            <p>Obudz swoje marzenia</p>
+          </li>
+          <li class="list-container__item" id="list-container__item3">
+            <h2>Odzież</h2>
+            <p>Odkryj kolekcję naszej odzieży</p>
+          </li>
+          <li class="list-container__item" id="list-container__item4">
+            <h2>Akcesoria</h2>
+            <p>Odkryj nasze oryginalne akcesoria</p>
+          </li>
+        </ul>
+      </section>
+      <div class="title">
+        <h2 class="title__header-two">Zyskaj jeszce więcej z Yamahą</h2>
+        <p class="title__paragraph">
+          Od lokalnych imprez i ciekawostek do wyjatkowych ofert-sprawdź, co
+          słychać w świecie Yamahy
+        </p>
+      </div>
+      <section class="banner-grid">
+        <div class="banner-grid__list">
+          <a
+            href="#"
+            class="banner-grid__item banner-grid__grid-col-span-2"
+            id="banner-grid__item1"
+          >
+            <h3>HARMO</h3>
+            <p>Innowacyjny system napędu elektrycznego Yamaha Motor do łodzi</p>
+          </a>
+          <a href="" class="banner-grid__item" id="banner-grid__item2">
+            <h3>Aplikacja MyGarage</h3>
+            <p>Stwórz swój motocykl w wersji 3D</p>
+          </a>
+          <a href="#" class="banner-grid__item" id="banner-grid__item3">
+            <h3>Yamalube</h3>
+            <p>Oleje i smary Yamaha</p>
+          </a>
+          <a href="#" class="banner-grid__item" id="banner-grid__item4">
+            <h3>Serwis</h3>
+            <p>Zarejestruj usługę serwisową</p>
+          </a>
+          <a
+            href="#"
+            class="banner-grid__item banner-grid__grid-col-span-2"
+            id="banner-grid__item5"
+          >
+            <h3>Startuj z dobrymi nawykami</h3>
+            <p>Zobacz jakie możliwości daje prawo jazdy samochodowe</p>
+          </a>
+          <a href="#" class="banner-grid__item" id="banner-grid__item6">
+            <h3>Instrukcje obsługi</h3>
+            <p>Znajdź instrukcję do Twojego pojazdu</p>
+          </a>
         </div>
       </section>
     </main>
+    <footer>
+      <div class="footer">
+        <div class="footer__social footer__item">
+          <button class="footer__country">Poland</button>
+          <ul class="footer__social-list">
+            <li class="footer__social-item">
+              <i class="fa-brands fa-twitter"></i>
+            </li>
+            <li class="footer__social-item">
+              <i class="fa-brands fa-facebook-f"></i>
+            </li>
+            <li class="footer__social-item">
+              <i class="fa-brands fa-instagram"></i>
+            </li>
+            <li class="footer__social-item">
+              <i class="fa-brands fa-youtube"></i>
+            </li>
+          </ul>
+        </div>
+        <div class="footer__about footer__item">
+          <h3 class="footer__header-three">O firmie</h3>
+          <ul>
+            <li><a href="" class="footer__list-item">O nas</a></li>
+            <li><a href="" class="footer__list-item">Kontakt</a></li>
+            <li>
+              <a href="" class="footer__list-item">Yamaha Motor Global</a>
+            </li>
+            <li><a href="" class="footer__list-item">Yamaha Racing</a></li>
+            <li><a href="" class="footer__list-item">Yamaha Music</a></li>
+            <li>
+              <a href="" class="footer__list-item">Yamaha Motor w Europe</a>
+            </li>
+            <li><a href="" class="footer__list-item">Podziel się opinią</a></li>
+          </ul>
+        </div>
+        <div class="footer__news footer__item">
+          <h3 class="footer__header-three">Aktualności</h3>
+          <ul>
+            <li>
+              <a href="" class="footer__list-item">Polska strona prasowa</a>
+            </li>
+            <li>
+              <a href="" class="footer__list-item">Europejska strona prasowa</a>
+            </li>
+            <li><a href="" class="footer__list-item">Katualności</a></li>
+            <li><a href="" class="footer__list-item">Promocje</a></li>
+          </ul>
+        </div>
+        <div class="footer__buisness footer__item">
+          <h3 class="footer__header-three">Dla biznesu</h3>
+          <ul>
+            <li><a href="" class="footer__list-item">Dla biznesu</a></li>
+            <li><a href="" class="footer__list-item">eBike</a></li>
+            <li><a href="" class="footer__list-item">Użutkownicy Pro</a></li>
+            <li>
+              <a href="" class="footer__list-item"
+                >Informacje techniczne dla Niezależnych Dealerów</a
+              >
+            </li>
+            <li>
+              <a href="" class="footer__list-item"
+                >Lekkie pojazdy ogólnego przeznaczenia</a
+              >
+            </li>
+            <li><a href="" class="footer__item">Robotics</a></li>
+          </ul>
+        </div>
+        <div class="footer__privacy footer__item">
+          <h3 class="footer__header-three">Polityka prywatności</h3>
+          <ul>
+            <li>
+              <a href="" class="footer__list-item">Prywatność & Cookies</a>
+            </li>
+            <li><a href="" class="footer__list-item">Informacja Cookies</a></li>
+            <li><a href="" class="footer__list-item">Informacja prawna</a></li>
+            <li>
+              <a href="" class="footer__list-item">Polityka prywatności</a>
+            </li>
+            <li>
+              <a href="" class="footer__list-item"
+                >YouTube Warunki korzystania</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
