--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+
     <script
       src="https://kit.fontawesome.com/501885fef0.js"
       crossorigin="anonymous"
@@ -18,6 +23,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="background"></div>
     <header class="header">
       <nav class="menu">
         <ul class="menu__list">
@@ -49,33 +55,49 @@
           </div>
         </div>
       </section>
+
       <section class="list-container">
         <ul class="list-container__list">
           <li class="list-container__item" id="list-container__item1">
-            <h2>Jazda testowa</h2>
-            <p>Zarezerwuj jazdę testową już dziś</p>
+            <div class="list-conteiner__description">
+              <h3 class="list-conteiner__header-three">Jazda testowa</h3>
+              <p class="list-conteiner__paragraph">
+                Zarezerwuj jazdę testową już dziś
+              </p>
+            </div>
           </li>
           <li class="list-container__item" id="list-container__item2">
-            <h2>Konfigurator</h2>
-            <p>Obudz swoje marzenia</p>
+            <div class="list-conteiner__description">
+              <h3 class="list-conteiner__header-three">Konfigurator</h3>
+              <p class="list-conteiner__paragraph">Obudz swoje marzenia</p>
+            </div>
           </li>
           <li class="list-container__item" id="list-container__item3">
-            <h2>Odzież</h2>
-            <p>Odkryj kolekcję naszej odzieży</p>
+            <div class="list-conteiner__description">
+              <h3 class="list-conteiner__header-three">Odzież</h3>
+              <p class="list-conteiner__paragraph">
+                Odkryj kolekcję naszej odzieży
+              </p>
+            </div>
           </li>
           <li class="list-container__item" id="list-container__item4">
-            <h2>Akcesoria</h2>
-            <p>Odkryj nasze oryginalne akcesoria</p>
+            <div class="list-conteiner__description">
+              <h3 class="list-conteiner__header-three">Akcesoria</h3>
+              <p class="list-conteiner__paragraph">
+                Odkryj nasze oryginalne akcesoria
+              </p>
+            </div>
           </li>
         </ul>
       </section>
       <div class="title">
-        <h2 class="title__header-two">Zyskaj jeszce więcej z Yamahą</h2>
+        <h2 class="title__header-two">Zyskaj jeszcze więcej z Yamahą</h2>
         <p class="title__paragraph">
           Od lokalnych imprez i ciekawostek do wyjatkowych ofert-sprawdź, co
           słychać w świecie Yamahy
         </p>
       </div>
+
       <section class="banner-grid">
         <div class="banner-grid__list">
           <a
@@ -84,19 +106,23 @@
             id="banner-grid__item1"
           >
             <h3>HARMO</h3>
-            <p>Innowacyjny system napędu elektrycznego Yamaha Motor do łodzi</p>
+            <p class="banner-grid__paragraph">
+              Innowacyjny system napędu elektrycznego Yamaha Motor do łodzi
+            </p>
           </a>
           <a href="" class="banner-grid__item" id="banner-grid__item2">
             <h3>Aplikacja MyGarage</h3>
-            <p>Stwórz swój motocykl w wersji 3D</p>
+            <p class="banner-grid__paragraph">
+              Stwórz swój motocykl w wersji 3D
+            </p>
           </a>
           <a href="#" class="banner-grid__item" id="banner-grid__item3">
             <h3>Yamalube</h3>
-            <p>Oleje i smary Yamaha</p>
+            <p class="banner-grid__paragraph">Oleje i smary Yamaha</p>
           </a>
           <a href="#" class="banner-grid__item" id="banner-grid__item4">
             <h3>Serwis</h3>
-            <p>Zarejestruj usługę serwisową</p>
+            <p class="banner-grid__paragraph">Zarejestruj usługę serwisową</p>
           </a>
           <a
             href="#"
@@ -104,11 +130,15 @@
             id="banner-grid__item5"
           >
             <h3>Startuj z dobrymi nawykami</h3>
-            <p>Zobacz jakie możliwości daje prawo jazdy samochodowe</p>
+            <p class="banner-grid__paragraph">
+              Zobacz jakie możliwości daje prawo jazdy samochodowe
+            </p>
           </a>
           <a href="#" class="banner-grid__item" id="banner-grid__item6">
             <h3>Instrukcje obsługi</h3>
-            <p>Znajdź instrukcję do Twojego pojazdu</p>
+            <p class="banner-grid__paragraph">
+              Znajdź instrukcję do Twojego pojazdu
+            </p>
           </a>
         </div>
       </section>
@@ -135,66 +165,90 @@
         <div class="footer__about footer__item">
           <h3 class="footer__header-three">O firmie</h3>
           <ul>
-            <li><a href="" class="footer__list-item">O nas</a></li>
-            <li><a href="" class="footer__list-item">Kontakt</a></li>
-            <li>
-              <a href="" class="footer__list-item">Yamaha Motor Global</a>
+            <li class="footer__list-item">
+              <a href="" class="footer__anchor">O nas</a>
             </li>
-            <li><a href="" class="footer__list-item">Yamaha Racing</a></li>
-            <li><a href="" class="footer__list-item">Yamaha Music</a></li>
-            <li>
-              <a href="" class="footer__list-item">Yamaha Motor w Europe</a>
+            <li class="footer__list-item">
+              <a href="" class="footer__anchor">Kontakt</a>
             </li>
-            <li><a href="" class="footer__list-item">Podziel się opinią</a></li>
+            <li class="footer__list-item">
+              <a href="" class="footer__anchor">Yamaha Motor Global</a>
+            </li>
+            <li class="footer__list-item">
+              <a href="" class="footer__anchor">Yamaha Racing</a>
+            </li>
+            <li class="footer__list-item">
+              <a href="" class="footer__anchor">Yamaha Music</a>
+            </li>
+            <li class="footer__list-item">
+              <a href="" class="footer__anchor">Yamaha Motor w Europe</a>
+            </li>
+            <li class="footer__list-item">
+              <a href="" class="footer__anchor">Podziel się opinią</a>
+            </li>
           </ul>
         </div>
         <div class="footer__news footer__item">
           <h3 class="footer__header-three">Aktualności</h3>
           <ul>
-            <li>
-              <a href="" class="footer__list-item">Polska strona prasowa</a>
+            <li class="footer__list-item">
+              <a href="" class="footer__anchor">Polska strona prasowa</a>
             </li>
-            <li>
-              <a href="" class="footer__list-item">Europejska strona prasowa</a>
+            <li class="footer__list-item">
+              <a href="" class="footer__anchor">Europejska strona prasowa</a>
             </li>
-            <li><a href="" class="footer__list-item">Katualności</a></li>
-            <li><a href="" class="footer__list-item">Promocje</a></li>
+            <li class="footer__list-item">
+              <a href="" class="footer__anchor">Katualności</a>
+            </li>
+            <li class="footer__list-item">
+              <a href="" class="footer__anchor">Promocje</a>
+            </li>
           </ul>
         </div>
         <div class="footer__buisness footer__item">
           <h3 class="footer__header-three">Dla biznesu</h3>
           <ul>
-            <li><a href="" class="footer__list-item">Dla biznesu</a></li>
-            <li><a href="" class="footer__list-item">eBike</a></li>
-            <li><a href="" class="footer__list-item">Użutkownicy Pro</a></li>
-            <li>
-              <a href="" class="footer__list-item"
+            <li class="footer__list-item">
+              <a href="" class="footer__anchor">Dla biznesu</a>
+            </li>
+            <li class="footer__list-item">
+              <a href="" class="footer__anchor">eBike</a>
+            </li>
+            <li class="footer__list-item">
+              <a href="" class="footer__anchor">Użutkownicy Pro</a>
+            </li>
+            <li class="footer__list-item">
+              <a href="" class="footer__anchor"
                 >Informacje techniczne dla Niezależnych Dealerów</a
               >
             </li>
-            <li>
-              <a href="" class="footer__list-item"
+            <li class="footer__list-item">
+              <a href="" class="footer__anchor"
                 >Lekkie pojazdy ogólnego przeznaczenia</a
               >
             </li>
-            <li><a href="" class="footer__item">Robotics</a></li>
+            <li class="footer__list-item">
+              <a href="" class="footer__anchor">Robotics</a>
+            </li>
           </ul>
         </div>
         <div class="footer__privacy footer__item">
           <h3 class="footer__header-three">Polityka prywatności</h3>
           <ul>
-            <li>
-              <a href="" class="footer__list-item">Prywatność & Cookies</a>
+            <li class="footer__list-item">
+              <a href="" class="footer__anchor">Prywatność & Cookies</a>
             </li>
-            <li><a href="" class="footer__list-item">Informacja Cookies</a></li>
-            <li><a href="" class="footer__list-item">Informacja prawna</a></li>
-            <li>
-              <a href="" class="footer__list-item">Polityka prywatności</a>
+            <li class="footer__list-item">
+              <a href="" class="footer__anchor">Informacja Cookies</a>
             </li>
-            <li>
-              <a href="" class="footer__list-item"
-                >YouTube Warunki korzystania</a
-              >
+            <li class="footer__list-item">
+              <a href="" class="footer__anchor">Informacja prawna</a>
+            </li>
+            <li class="footer__list-item">
+              <a href="" class="footer__anchor">Polityka prywatności</a>
+            </li>
+            <li class="footer__list-item">
+              <a href="" class="footer__anchor">YouTube Warunki korzystania</a>
             </li>
           </ul>
         </div>
