Added buttons on second section. Managed responsivness on second section (mediaqueries)

--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@
     <div class="background"></div>
     <header class="header">
       <nav class="menu">
+        <ul class="menu__mobile">
+          <a href="#"
+            ><i class="fa-solid fa-cart-shopping"
+              ><span class="menu__cart-item-number">0</span></i
+            >
+          </a>
+          <a href="#"><i class="fa-solid fa-user"></i></a>
+          <button type="button" class="menu__button">
+            <i class="fa-solid fa-bars"></i>
+          </button>
+        </ul>
         <ul class="menu__list">
           <img
             class="menu__logo"
@@ -59,6 +70,9 @@
       <section class="list-container">
         <ul class="list-container__list">
           <li class="list-container__item" id="list-container__item1">
+            <div class="list-container__buttons">
+              <a class="list-container__link" href="#">Motocykle i Skutery</a>
+            </div>
             <div class="list-conteiner__description">
               <h3 class="list-conteiner__header-three">Jazda testowa</h3>
               <p class="list-conteiner__paragraph">
@@ -67,12 +81,21 @@
             </div>
           </li>
           <li class="list-container__item" id="list-container__item2">
+            <div class="list-container__buttons">
+              <a class="list-container__link" href="#">Motocykle</a>
+              <a class="list-container__link" href="#">Skutery</a>
+            </div>
             <div class="list-conteiner__description">
               <h3 class="list-conteiner__header-three">Konfigurator</h3>
               <p class="list-conteiner__paragraph">Obudz swoje marzenia</p>
             </div>
           </li>
           <li class="list-container__item" id="list-container__item3">
+            <div class="list-container__buttons">
+              <a class="list-container__link" href="#">Damska</a>
+              <a class="list-container__link" href="#">Męska</a>
+              <a class="list-container__link" href="#">Dziecięca</a>
+            </div>
             <div class="list-conteiner__description">
               <h3 class="list-conteiner__header-three">Odzież</h3>
               <p class="list-conteiner__paragraph">
@@ -81,6 +104,12 @@
             </div>
           </li>
           <li class="list-container__item" id="list-container__item4">
+            <div class="list-container__buttons">
+              <a class="list-container__link" href="#">Motocykl</a>
+              <a class="list-container__link" href="#">Skuter</a>
+              <a class="list-container__link" href="#">Marine</a>
+              <a class="list-container__link" href="#">ATV & Side by Side</a>
+            </div>
             <div class="list-conteiner__description">
               <h3 class="list-conteiner__header-three">Akcesoria</h3>
               <p class="list-conteiner__paragraph">
