Added rolling down  menu, hover and underline after click on navigation item

--- a/index.html
+++ b/index.html
@@ -35,22 +35,222 @@
           <a href="#"><i class="fa-solid fa-user"></i></a>
           <button type="button" class="menu__button">
             <i class="fa-solid fa-bars"></i>
+            <i class="fa-solid fa-xmark menu__button-hide"></i>
           </button>
         </ul>
+        <img
+          class="menu__logo"
+          src="images/yamaha-logo.svg"
+          alt="Logo Yamaha"
+        />
         <ul class="menu__list">
-          <img
-            class="menu__logo"
-            src="images/yamaha-logo.svg"
-            alt="Logo Yamaha"
-          />
-          <li class="menu__item">Motocykle</li>
-          <li class="menu__item">Skutery</li>
-          <li class="menu__item">eBikes</li>
-          <li class="menu__item">Woda</li>
-          <li class="menu__item">4 koła</li>
-          <li class="menu__item">Śnieg</li>
-          <li class="menu__item">Akcesoria i Odzież</li>
+          <li class="menu__item">
+            <a href="#" class="menu__link" id="motor">
+              Motocykle <i class="fa-solid fa-chevron-right menu__chevron"></i
+            ></a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__link" id="scooters"
+              >Skutery<i class="fa-solid fa-chevron-right menu__chevron"></i
+            ></a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__link" id="eBikes"
+              >eBikes<i class="fa-solid fa-chevron-right menu__chevron"></i
+            ></a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__link" id="water"
+              >Woda<i class="fa-solid fa-chevron-right menu__chevron"></i
+            ></a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__link" id="four-wheels"
+              >4 koła<i class="fa-solid fa-chevron-right menu__chevron"></i
+            ></a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__link" id="snow"
+              >Śnieg<i class="fa-solid fa-chevron-right menu__chevron"></i
+            ></a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__link" id="clothes"
+              >Akcesoria i Odzież<i
+                class="fa-solid fa-chevron-right menu__chevron"
+              ></i
+            ></a>
+          </li>
         </ul>
+        <div class="menu__rolling-down menu__rolling-down-motocykle">
+          <div class="menu__roling-down-left">
+            <span class="menu__rolling-down-header">Motocykle</span>
+            <ul class="menu__roling-down-left-links">
+              <li class="menu__roling-down-left-item">
+                <p>Supersport</p>
+                <i class="fa-solid fa-chevron-right"></i>
+              </li>
+              <li class="menu__roling-down-left-item">
+                <p>Hper Naked</p>
+                <i class="fa-solid fa-chevron-right"></i>
+              </li>
+              <li class="menu__roling-down-left-item">
+                <p>Sport Heritage</p>
+                <i class="fa-solid fa-chevron-right"></i>
+              </li>
+              <li class="menu__roling-down-left-item">
+                <p>Sport Touring</p>
+                <i class="fa-solid fa-chevron-right"></i>
+              </li>
+              <li class="menu__roling-down-left-item">
+                <p>Adventure</p>
+                <i class="fa-solid fa-chevron-right"></i>
+              </li>
+              <li class="menu__roling-down-left-item">
+                <p>Cross</p>
+                <i class="fa-solid fa-chevron-right"></i>
+              </li>
+              <li class="menu__roling-down-left-item">
+                <p>125cm3</p>
+                <i class="fa-solid fa-chevron-right"></i>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="menu__rolling-down menu__rolling-down-scooters">
+          <div class="menu__roling-down-left">
+            <span class="menu__rolling-down-header">Skutery</span>
+            <ul class="menu__roling-down-left-links">
+              <li class="menu__roling-down-left-item">
+                <p>Skutery Sportowe</p>
+                <i class="fa-solid fa-chevron-right"></i>
+              </li>
+              <li class="menu__roling-down-left-item">
+                <p>Urban Mobility</p>
+                <i class="fa-solid fa-chevron-right"></i>
+              </li>
+              <li class="menu__roling-down-left-item">
+                <p>125cm3</p>
+                <i class="fa-solid fa-chevron-right"></i>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="menu__rolling-down menu__rolling-down-eBikes">
+          <div class="menu__roling-down-left">
+            <span class="menu__rolling-down-header">eBikes</span>
+            <ul class="menu__roling-down-left-links">
+              <li class="menu__roling-down-left-item">
+                <p>Mountain eBike</p>
+                <i class="fa-solid fa-chevron-right"></i>
+              </li>
+              <li class="menu__roling-down-left-item">
+                <p>Urban eBike</p>
+                <i class="fa-solid fa-chevron-right"></i>
+              </li>
+              <li class="menu__roling-down-left-item">
+                <p>Gravel eBike</p>
+                <i class="fa-solid fa-chevron-right"></i>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="menu__rolling-down menu__rolling-down-water">
+          <div class="menu__roling-down-left">
+            <span class="menu__rolling-down-header">Woda</span>
+            <ul class="menu__roling-down-left-links">
+              <li class="menu__roling-down-left-item">
+                <p>Silniki zaburtowe</p>
+                <i class="fa-solid fa-chevron-right"></i>
+              </li>
+              <li class="menu__roling-down-left-item">
+                <p>Skutery Wodne</p>
+                <i class="fa-solid fa-chevron-right"></i>
+              </li>
+              <li class="menu__roling-down-left-item">
+                <p>Łodzie</p>
+                <i class="fa-solid fa-chevron-right"></i>
+              </li>
+              <li class="menu__roling-down-left-item">
+                <p>Marki Łodzi</p>
+                <i class="fa-solid fa-chevron-right"></i>
+              </li>
+              <li class="menu__roling-down-left-item">
+                <p>Helm Master EX</p>
+                <i class="fa-solid fa-chevron-right"></i>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="menu__rolling-down menu__rolling-down-four-wheels">
+          <div class="menu__roling-down-left">
+            <span class="menu__rolling-down-header">4 koła</span>
+            <ul class="menu__roling-down-left-links">
+              <li class="menu__roling-down-left-item">
+                <p>ATV & Side by Side</p>
+                <i class="fa-solid fa-chevron-right"></i>
+              </li>
+              <li class="menu__roling-down-left-item">
+                <p>Wózki golfowe</p>
+                <i class="fa-solid fa-chevron-right"></i>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="menu__rolling-down menu__rolling-down-snow">
+          <div class="menu__roling-down-left">
+            <span class="menu__rolling-down-header">Śnieg</span>
+            <ul class="menu__roling-down-left-links">
+              <li class="menu__roling-down-left-item">
+                <p>Skutery śnieżne</p>
+                <i class="fa-solid fa-chevron-right"></i>
+              </li>
+              <li class="menu__roling-down-left-item">
+                <p>Odśnieżarki</p>
+                <i class="fa-solid fa-chevron-right"></i>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="menu__rolling-down menu__rolling-down-accesories">
+          <div class="menu__roling-down-left">
+            <span class="menu__rolling-down-header">Akcesoria i odzież</span>
+            <ul class="menu__roling-down-left-links">
+              <li class="menu__roling-down-left-item">
+                <p>Odzież motocyklowa</p>
+                <i class="fa-solid fa-chevron-right"></i>
+              </li>
+              <li class="menu__roling-down-left-item">
+                <p>Odzież</p>
+                <i class="fa-solid fa-chevron-right"></i>
+              </li>
+              <li class="menu__roling-down-left-item">
+                <p>Odzież marine</p>
+                <i class="fa-solid fa-chevron-right"></i>
+              </li>
+              <li class="menu__roling-down-left-item">
+                <p>Sporty wodne</p>
+                <i class="fa-solid fa-chevron-right"></i>
+              </li>
+              <li class="menu__roling-down-left-item">
+                <p>Akcesoria i odzież rowerowa</p>
+                <i class="fa-solid fa-chevron-right"></i>
+              </li>
+              <li class="menu__roling-down-left-item">
+                <p>Gadżety i bagaż</p>
+                <i class="fa-solid fa-chevron-right"></i>
+              </li>
+              <li class="menu__roling-down-left-item">
+                <p>Akcesoria</p>
+                <i class="fa-solid fa-chevron-right"></i>
+              </li>
+              <li class="menu__roling-down-left-item">
+                <p>Yamalube</p>
+                <i class="fa-solid fa-chevron-right"></i>
+              </li>
+            </ul>
+          </div>
+        </div>
       </nav>
     </header>
     <main>
@@ -283,5 +483,6 @@
         </div>
       </div>
     </footer>
+    <script src="dist/app.js"></script>
   </body>
 </html>
